--- a/src/assets/components/common/topHeader/topHeader.astro
+++ b/src/assets/components/common/topHeader/topHeader.astro
@@ -75,6 +75,11 @@ import menuOpenImage from "../../../images/topHeader/menu-open.svg";
     padding-top: spx(22);
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
     @include tablet-up {
       padding-top: tpx(44);
     }
