--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,17 @@
 ---
 // メインSCSSファイルをインポート
-import "../styles/main.scss";
+import '../styles/main.scss';
 
-import { getImage } from "astro:assets";
-import Head from "../assets/components/common/head.astro";
-import TopHeader from "../assets/components/common/topHeader/topHeader.astro";
-import SiteBg from "../assets/components/common/siteBg.astro";
-import Footer from "../assets/components/common/footer/footer.astro";
-import Hero from "../assets/components/pages/top/1-hero.astro";
-import Lead from "../assets/components/pages/top/2-lead.astro";
-import MainSlider from "../assets/components/pages/top/3-mainSlider.astro";
-import Enjoy from "../assets/components/pages/top/4-enjoy.astro";
-import Crowd from "../assets/components/pages/top/5-crowd.astro";
+import { getImage } from 'astro:assets';
+import Head from '../assets/components/common/head.astro';
+import TopHeader from '../assets/components/common/topHeader/topHeader.astro';
+import SiteBg from '../assets/components/common/siteBg.astro';
+import Footer from '../assets/components/common/footer/footer.astro';
+import Hero from '../assets/components/pages/top/1-hero.astro';
+import Lead from '../assets/components/pages/top/2-lead.astro';
+import MainSlider from '../assets/components/pages/top/3-mainSlider.astro';
+import Enjoy from '../assets/components/pages/top/4-enjoy.astro';
+import Crowd from '../assets/components/pages/top/5-crowd.astro';
 ---
 
 <html lang="ja">
@@ -25,6 +25,116 @@ import Crowd from "../assets/components/pages/top/5-crowd.astro";
       <MainSlider />
       <Enjoy />
       <Crowd />
+      <!-- お知らせセクション -->
+      <section class="news">
+        <nav class="news__filter">
+          <ul class="news__filter-list">
+            <li class="news__filter-item">
+              <a href="#" class="news__filter-link"
+                ><span class="news__filter-text">すべて</span></a
+              >
+            </li>
+            <li class="news__filter-item">
+              <a href="#" class="news__filter-link"
+                ><span class="news__filter-text">お知らせ</span></a
+              >
+            </li>
+            <li class="news__filter-item">
+              <a href="#" class="news__filter-link"
+                ><span class="news__filter-text">イベント・キャンペーン</span
+                ></a
+              >
+            </li>
+            <li class="news__filter-item">
+              <a href="#" class="news__filter-link"
+                ><span class="news__filter-text">スタッフブログ</span></a
+              >
+            </li>
+          </ul>
+        </nav>
+        <div class="news__list-wrapper">
+          <ul class="news__list">
+            <li class="news__item">
+              <article class="news__article">
+                <a href="#" class="news__item-link">
+                  <header class="news__item-header">
+                    <time datetime="2025-01-01" class="news__item-date"
+                      >2025.01.01</time
+                    >
+                    <span class="news__item-category">お知らせ</span>
+                  </header>
+                  <h3 class="news__item-title">
+                    ホームページをリニューアルいたしました。
+                  </h3>
+                </a>
+              </article>
+            </li>
+            <li class="news__item">
+              <article class="news__article">
+                <a href="#" class="news__item-link">
+                  <header class="news__item-header">
+                    <time datetime="2025-01-01" class="news__item-date"
+                      >2025.01.01</time
+                    >
+                    <span class="news__item-category">お知らせ</span>
+                  </header>
+                  <h3 class="news__item-title">
+                    ホームページをリニューアルいたしました。
+                  </h3>
+                </a>
+              </article>
+            </li>
+            <li class="news__item">
+              <article class="news__article">
+                <a href="#" class="news__item-link">
+                  <header class="news__item-header">
+                    <time datetime="2025-01-01" class="news__item-date"
+                      >2025.01.01</time
+                    >
+                    <span class="news__item-category">お知らせ</span>
+                  </header>
+                  <h3 class="news__item-title">
+                    ホームページをリニューアルいたしました。
+                  </h3>
+                </a>
+              </article>
+            </li>
+          </ul>
+        </div>
+        <div class="news__more">
+          <a href="" class="news__more-link">
+            <span class="news__more-text">もっとみる</span>
+            <svg
+              class="news__more-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="55"
+              height="55"
+              viewBox="0 0 55 55"
+              fill="none"
+              aria-hidden="true"
+            >
+              <path
+                d="M27.46 52.46C41.2671 52.46 52.46 41.2671 52.46 27.46C52.46 13.6528 41.2671 2.45996 27.46 2.45996C13.6528 2.45996 2.45996 13.6528 2.45996 27.46C2.45996 41.2671 13.6528 52.46 27.46 52.46Z"
+                stroke="#F1EAE4"
+                stroke-width="4.92"
+                stroke-linecap="round"
+                stroke-linejoin="round"></path>
+              <path
+                d="M27.4596 37.46L37.4596 27.46L27.4596 17.46"
+                stroke="#F1EAE4"
+                stroke-width="4.92"
+                stroke-linecap="round"
+                stroke-linejoin="round"></path>
+              <path
+                d="M17.4595 27.46H37.4595"
+                stroke="#F1EAE4"
+                stroke-width="4.92"
+                stroke-linecap="round"
+                stroke-linejoin="round"></path>
+            </svg>
+          </a>
+        </div>
+      </section>
     </main>
     <Footer />
   </body>
@@ -32,9 +142,9 @@ import Crowd from "../assets/components/pages/top/5-crowd.astro";
 
 <style lang="scss">
   // 必要なmixin/functionをインポート
-  @import "../styles/variables";
-  @import "../styles/functions";
-  @import "../styles/mixins";
+  @import '../styles/variables';
+  @import '../styles/functions';
+  @import '../styles/mixins';
 
   main {
     padding-top: spx(176);
@@ -46,325 +156,175 @@ import Crowd from "../assets/components/pages/top/5-crowd.astro";
     }
   }
 
-  // 混雑状況セクション
-  .crowd {
-    background: rgba(124, 99, 81, 0.70);
-    padding-top: spx(40);
-    padding-bottom: spx(105);
+  // お知らせセクション
+  .news {
+    background: rgba(124, 99, 81, 0.7);
     @include tablet-up {
-      padding-top: ppx(150 *1.2);
-      padding-bottom: ppx(250 *1.2);
     }
     @include desktop-up {
-      padding-top: ppx(150);
-      padding-bottom: ppx(250);
     }
 
-    &__header {
-      display: flex;
-      gap: spx(36);
-      align-items: flex-end;
-      justify-content: center;
+    &__filter {
+      display: none;
       @include tablet-up {
-        justify-content: flex-start;
-        gap: ppx(76 *1.2);
-        margin-left: 38vw;
+        display: block;
       }
       @include desktop-up {
-        margin-left: ppx(1008);
-        gap: ppx(76);
       }
     }
 
-    &__header-text {
-      display: flex;
-      flex-direction: column;
-      gap: spx(10);
+    &__filter-list {
       @include tablet-up {
+        display: flex;
         align-items: center;
-        gap: ppx(10 *1.2);
-      }
-      @include desktop-up {
-        gap: ppx(10);
-      }
-    }
-
-    &__title {
-      color: var(--main_color_3, #F1EAE4);
-      font-family: "Zen Maru Gothic";
-      font-size: spx(46);
-      font-style: normal;
-      font-weight: 500;
-      line-height: 140%; /* 64.4px */
-      letter-spacing: spx(2.3);
-      @include tablet-up {
-        font-size: ppx(65*1.2);
-        letter-spacing: ppx(3.25 *1.2);
-      }
-      @include desktop-up {
-        font-size: ppx(65);
-        letter-spacing: ppx(3.25);
-      }
-    }
-
-    &__datetime {
-      color: var(--main_color_3, #F1EAE4);
-      font-family: "Zen Maru Gothic";
-      font-size: spx(26);
-      font-style: normal;
-      font-weight: 500;
-      line-height: 100%; /* 26px */
-      letter-spacing: spx(1.3);
-      @include tablet-up {
-        font-size: ppx(33 *1.2);
-        letter-spacing: ppx(1.65 *1.2);
-        line-height: 180%; /* 59.4px */
-      }
-      @include desktop-up {
-        font-size: ppx(33);
-        letter-spacing: ppx(1.65);
-      }
-    }
-
-    &__illustration {
-      width: spx(136);
-      @include tablet-up {
-        width: ppx(206 *1.2);
-      }
-      @include desktop-up {
-        width: ppx(206);
-      }
-
-      img {
-        width: 100%;
-        display: block;
-        @include tablet-up {
-        }
-        @include desktop-up {
-        }
-      }
-    }
-
-    &__body {
-      background-image: var(--bg-image-sp);
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      width: spx(640);
-      height: spx(253);
-      margin-inline: auto;
-      margin-top: spx(45);
-      @include tablet-up {
-        background-image: var(--bg-image);
-        width: ppx(1800 *1.2);
-        height: ppx(622 *1.2);
-        margin-top: ppx(60 *1.2);
-      }
-      @include desktop-up {
-        width: ppx(1800);
-        height: ppx(622);
-        margin-top: ppx(60);
-      }
-    }
-
-    &__content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: spx(10);
-      padding-top: spx(25);
-      @include tablet-up {
-        gap: ppx(30 *1.2);
-        padding-top: ppx(60 *1.2);
-      }
-      @include desktop-up {
-        gap: ppx(30);
-        padding-top: ppx(60);
-      }
-    }
-
-    &__indicators {
-      display: flex;
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__indicator-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-
-      &--active {
-        @include tablet-up {
-        }
-        @include desktop-up {
-        }
-      }
-      &.first {
-        gap: spx(17);
-        @include tablet-up {
-          gap: ppx(34 *1.2);
-        }
-        @include desktop-up {
-          gap: ppx(34);
-        }
-        .crowd__icon {
-          width: spx(63);
-          @include tablet-up {
-            width: ppx(157 *1.2);
-          }
-          @include desktop-up {
-            width: ppx(157);
-          }
-        }
-      }
-      &.second {
-        gap: spx(34);
-        margin: 0 spx(69) 0 spx(95);
-        @include tablet-up {
-          gap: ppx(34 *1.2);
-          margin: 0 ppx(271 *1.2) 0 ppx(353 *1.2);
-        }
-        @include desktop-up {
-          gap: ppx(34);
-          margin: 0 ppx(271) 0 ppx(353);
-        }
-        .crowd__icon {
-          width: spx(133);
-          @include tablet-up {
-            width: ppx(329 *1.2);
-          }
-          @include desktop-up {
-            width: ppx(329);
-          }
-        }
-      }
-      &.third {
-        gap: ppx(20);
-        @include tablet-up {
-          gap: ppx(20 *1.2);
-        }
-        @include desktop-up {
-          gap: ppx(20);
-        }
-        .crowd__icon {
-          width: spx(129);
-          @include tablet-up {
-            width: ppx(319 *1.2);
-          }
-          @include desktop-up {
-            width: ppx(319);
-          }
-        }
-      }
-    }
-
-    &__marker {
-      display: block;
-      width: spx(20);
-      height: auto;
-      @include tablet-up {
-        width: ppx(51 *1.2);
-      }
-      @include desktop-up {
-        width: ppx(51);
-      }
-
-      svg {
-        display: block;
-        width: spx(20);
-        height: auto;
-        @include tablet-up {
-          width: ppx(51 *1.2);
-        }
-        @include desktop-up {
-          width: ppx(51);
-        }
-      }
-    }
-
-    &__icon {
-      display: block;
-      height: auto;
-      width: max-content;
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-
-      svg {
-        display: block;
-        @include tablet-up {
-        }
-        @include desktop-up {
-        }
-        path {
-          fill: var(--main_color_1, #7C6351);
-        }
-      }
-    }
-
-    &__legend {
-      display: flex;
-      align-items: center;
-      gap: spx(20);
-      @include tablet-up {
-        gap: ppx(20 *1.2);
+        justify-content: center;
+        gap: tpx(20 * 1.2);
       }
       @include desktop-up {
         gap: ppx(20);
       }
     }
 
-    &__legend-label {
-      display: block;
-      width: spx(60);
-      height: auto;
+    &__filter-item {
       @include tablet-up {
-        width: ppx(119 *1.2);
       }
       @include desktop-up {
-        width: ppx(119);
       }
+    }
 
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        @include tablet-up {
-          object-fit: contain;
-        }
-        @include desktop-up {
-          object-fit: contain;
+    &__filter-link {
+      @include tablet-up {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: ppx(400 * 1.2);
+        height: ppx(76 * 1.2);
+        border-radius: ppx(40 * 1.2);
+        background: var(--main_color_3, #f1eae4);
+        transition: background 0.3s ease;
+      }
+      @include desktop-up {
+        width: ppx(400);
+        height: ppx(76);
+        border-radius: ppx(40);
+      }
+      @include hover {
+        &:hover {
+          background: var(--main_color_2, #d6b156);
         }
       }
     }
 
-    &__legend-arrow {
-      display: block;
-      width: spx(290);
-      height: auto;
+    &__filter-text {
       @include tablet-up {
-        width: ppx(984 *1.2);
+        color: var(--main_color_1, #7c6351);
+        text-align: center;
+        font-size: ppx(30 * 1.2);
+        font-style: normal;
+        font-weight: 500;
+        line-height: 86.667%;
+        letter-spacing: ppx(0.9 * 1.2);
+        transition: color 0.3s ease;
       }
       @include desktop-up {
-        width: ppx(984);
+        font-size: ppx(30);
+        letter-spacing: ppx(0.9);
       }
+      @include hover {
+        &:hover {
+          color: white;
+        }
+      }
+    }
 
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        @include tablet-up {
-        }
-        @include desktop-up {
-        }
+    &__list-wrapper {
+      @include tablet-up {
+      }
+      @include desktop-up {
+      }
+    }
+
+    &__list {
+      @include tablet-up {
+      }
+      @include desktop-up {
+      }
+    }
+
+    &__item {
+      @include tablet-up {
+      }
+      @include desktop-up {
+      }
+    }
+
+    &__article {
+      @include tablet-up {
+      }
+      @include desktop-up {
+      }
+    }
+
+    &__item-link {
+      @include tablet-up {
+      }
+      @include desktop-up {
+      }
+    }
+
+    &__item-header {
+      @include tablet-up {
+      }
+      @include desktop-up {
+      }
+    }
+
+    &__item-date {
+      @include tablet-up {
+      }
+      @include desktop-up {
+      }
+    }
+
+    &__item-category {
+      @include tablet-up {
+      }
+      @include desktop-up {
+      }
+    }
+
+    &__item-title {
+      @include tablet-up {
+      }
+      @include desktop-up {
+      }
+    }
+
+    &__more {
+      @include tablet-up {
+      }
+      @include desktop-up {
+      }
+    }
+
+    &__more-link {
+      @include tablet-up {
+      }
+      @include desktop-up {
+      }
+    }
+
+    &__more-text {
+      @include tablet-up {
+      }
+      @include desktop-up {
+      }
+    }
+
+    &__more-icon {
+      @include tablet-up {
+      }
+      @include desktop-up {
       }
     }
   }
