新しい「お知らせ」セクションを追加し、関連するSVGアセットを作成。index.astroを更新してNewsコンポーネントを導入し、スタイルを調整しました。

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import Lead from '../assets/components/pages/top/2-lead.astro';
 import MainSlider from '../assets/components/pages/top/3-mainSlider.astro';
 import Enjoy from '../assets/components/pages/top/4-enjoy.astro';
 import Crowd from '../assets/components/pages/top/5-crowd.astro';
+import News from '../assets/components/pages/top/6-news.astro';
 ---
 
 <html lang="ja">
@@ -25,116 +26,7 @@ import Crowd from '../assets/components/pages/top/5-crowd.astro';
       <MainSlider />
       <Enjoy />
       <Crowd />
-      <!-- お知らせセクション -->
-      <section class="news">
-        <nav class="news__filter">
-          <ul class="news__filter-list">
-            <li class="news__filter-item">
-              <a href="#" class="news__filter-link"
-                ><span class="news__filter-text">すべて</span></a
-              >
-            </li>
-            <li class="news__filter-item">
-              <a href="#" class="news__filter-link"
-                ><span class="news__filter-text">お知らせ</span></a
-              >
-            </li>
-            <li class="news__filter-item">
-              <a href="#" class="news__filter-link"
-                ><span class="news__filter-text">イベント・キャンペーン</span
-                ></a
-              >
-            </li>
-            <li class="news__filter-item">
-              <a href="#" class="news__filter-link"
-                ><span class="news__filter-text">スタッフブログ</span></a
-              >
-            </li>
-          </ul>
-        </nav>
-        <div class="news__list-wrapper">
-          <ul class="news__list">
-            <li class="news__item">
-              <article class="news__article">
-                <a href="#" class="news__item-link">
-                  <header class="news__item-header">
-                    <time datetime="2025-01-01" class="news__item-date"
-                      >2025.01.01</time
-                    >
-                    <span class="news__item-category">お知らせ</span>
-                  </header>
-                  <h3 class="news__item-title">
-                    ホームページをリニューアルいたしました。
-                  </h3>
-                </a>
-              </article>
-            </li>
-            <li class="news__item">
-              <article class="news__article">
-                <a href="#" class="news__item-link">
-                  <header class="news__item-header">
-                    <time datetime="2025-01-01" class="news__item-date"
-                      >2025.01.01</time
-                    >
-                    <span class="news__item-category">お知らせ</span>
-                  </header>
-                  <h3 class="news__item-title">
-                    ホームページをリニューアルいたしました。
-                  </h3>
-                </a>
-              </article>
-            </li>
-            <li class="news__item">
-              <article class="news__article">
-                <a href="#" class="news__item-link">
-                  <header class="news__item-header">
-                    <time datetime="2025-01-01" class="news__item-date"
-                      >2025.01.01</time
-                    >
-                    <span class="news__item-category">お知らせ</span>
-                  </header>
-                  <h3 class="news__item-title">
-                    ホームページをリニューアルいたしました。
-                  </h3>
-                </a>
-              </article>
-            </li>
-          </ul>
-        </div>
-        <div class="news__more">
-          <a href="" class="news__more-link">
-            <span class="news__more-text">もっとみる</span>
-            <svg
-              class="news__more-icon"
-              xmlns="http://www.w3.org/2000/svg"
-              width="55"
-              height="55"
-              viewBox="0 0 55 55"
-              fill="none"
-              aria-hidden="true"
-            >
-              <path
-                d="M27.46 52.46C41.2671 52.46 52.46 41.2671 52.46 27.46C52.46 13.6528 41.2671 2.45996 27.46 2.45996C13.6528 2.45996 2.45996 13.6528 2.45996 27.46C2.45996 41.2671 13.6528 52.46 27.46 52.46Z"
-                stroke="#F1EAE4"
-                stroke-width="4.92"
-                stroke-linecap="round"
-                stroke-linejoin="round"></path>
-              <path
-                d="M27.4596 37.46L37.4596 27.46L27.4596 17.46"
-                stroke="#F1EAE4"
-                stroke-width="4.92"
-                stroke-linecap="round"
-                stroke-linejoin="round"></path>
-              <path
-                d="M17.4595 27.46H37.4595"
-                stroke="#F1EAE4"
-                stroke-width="4.92"
-                stroke-linecap="round"
-                stroke-linejoin="round"></path>
-            </svg>
-          </a>
-        </div>
-      </section>
+      <News />
     </main>
     <Footer />
   </body>
@@ -153,179 +45,6 @@ import Crowd from '../assets/components/pages/top/5-crowd.astro';
     }
     @include desktop-up {
       padding-top: ppx(182);
-    }
-  }
-
-  // お知らせセクション
-  .news {
-    background: rgba(124, 99, 81, 0.7);
-    @include tablet-up {
-    }
-    @include desktop-up {
-    }
-
-    &__filter {
-      display: none;
-      @include tablet-up {
-        display: block;
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__filter-list {
-      @include tablet-up {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: tpx(20 * 1.2);
-      }
-      @include desktop-up {
-        gap: ppx(20);
-      }
-    }
-
-    &__filter-item {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__filter-link {
-      @include tablet-up {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: ppx(400 * 1.2);
-        height: ppx(76 * 1.2);
-        border-radius: ppx(40 * 1.2);
-        background: var(--main_color_3, #f1eae4);
-        transition: background 0.3s ease;
-      }
-      @include desktop-up {
-        width: ppx(400);
-        height: ppx(76);
-        border-radius: ppx(40);
-      }
-      @include hover {
-        &:hover {
-          background: var(--main_color_2, #d6b156);
-        }
-      }
-    }
-
-    &__filter-text {
-      @include tablet-up {
-        color: var(--main_color_1, #7c6351);
-        text-align: center;
-        font-size: ppx(30 * 1.2);
-        font-style: normal;
-        font-weight: 500;
-        line-height: 86.667%;
-        letter-spacing: ppx(0.9 * 1.2);
-        transition: color 0.3s ease;
-      }
-      @include desktop-up {
-        font-size: ppx(30);
-        letter-spacing: ppx(0.9);
-      }
-      @include hover {
-        &:hover {
-          color: white;
-        }
-      }
-    }
-
-    &__list-wrapper {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__list {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__item {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__article {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__item-link {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__item-header {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__item-date {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__item-category {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__item-title {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__more {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__more-link {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__more-text {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
-    }
-
-    &__more-icon {
-      @include tablet-up {
-      }
-      @include desktop-up {
-      }
     }
   }
 </style>
